<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">
    <TextView
        android:id="@+id/open_ticket_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/op_tck"
        android:textSize="@dimen/big_font"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/single_line_green"
        android:paddingBottom="10dp"
        android:weightSum="2">
        <EditText
            android:id="@+id/open_ticket_subject"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/solid_white"
            android:textSize="@dimen/small_font"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/grey"
            android:hint="@string/subject"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/open_priority"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Priority"
                android:textSize="@dimen/med_font"
                android:gravity="left|center"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/open_ticket_spinner_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:prompt="@string/sel_prio"
                android:layout_weight="1"
                android:entries="@array/priority">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="2">
            <TextView
                android:id="@+id/open_department"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Department"
                android:textSize="@dimen/med_font"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/open_ticket_spinner_dept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:prompt="@string/sel_dept"
                android:layout_weight="1">
            </Spinner>
        </LinearLayout>
        <EditText
            android:id="@+id/open_ticket_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="6"
            android:background="@drawable/solid_white"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/small_font"
            android:textColor="@color/grey"
            android:hint="@string/wrt_msg"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/open_ticket_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/solid_green"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/sub"
        android:textSize="@dimen/very_small_font"
        android:textColor="@color/white"/>

</LinearLayout>