<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_light_grey"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/small_font"
        android:padding="5dp"
        android:gravity="center"
        android:hint="@string/username"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_light_grey"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/small_font"
        android:padding="5dp"
        android:password="true"
        android:gravity="center"
        android:hint="@string/pass"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/login_signin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/solid_green"
        android:layout_marginTop="5dp"
        android:text="@string/login"
        android:textSize="@dimen/very_small_font"
        android:textColor="@color/white"
        android:layout_gravity="right"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginRight="30dp"
        />

</LinearLayout>