<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/grey_light">

    <!--
    This view is deisgned to show Domain Title with exclusive Design
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/only_stroke"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/domain_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dom"
            android:layout_weight="1"
            android:background="@drawable/solid_green"
            android:textColor="@color/white"
            android:textSize="@dimen/big_font"
            android:paddingLeft="5dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/dom_det_dom_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"/>
    </LinearLayout>


    <!--
    This view is static and only hold details title
    -->
    <TextView
        android:id="@+id/dom_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/det"
        android:textSize="@dimen/big_font"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        />

    <!--
    This layout is for registration date
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/single_line">
        <TextView
            android:id="@+id/dom_det_reg_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_date"
            android:textColor="@color/green"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/dom_det_reg_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/med_font"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <!--
    This layout is for first payment amount
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/single_line">
        <TextView
            android:id="@+id/dom_det_fir_pay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fir_pay"
            android:textColor="@color/green"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/dom_det_fir_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/med_font"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <!--
    This layout is for recurring amount
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/single_line">
        <TextView
            android:id="@+id/dom_det_rec_amn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rec_amn"
            android:textColor="@color/green"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/dom_det_rec_amn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/med_font"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <!--
    This layout is for billing cycle
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/single_line">
        <TextView
            android:id="@+id/dom_det_bil_cyc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bil_cyc"
            android:textColor="@color/green"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/dom_det_bil_cyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/med_font"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <!--
    This layout is for next due date
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/single_line">
        <TextView
            android:id="@+id/dom_det_nxt_dt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nx_date"
            android:textColor="@color/green"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/dom_det_nxt_dt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/med_font"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>

    <!--
    This layout is for payment method
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/single_line">
        <TextView
            android:id="@+id/dom_det_pay_met_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_met"
            android:textColor="@color/green"
            android:textSize="@dimen/med_font"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
        <TextView
            android:id="@+id/dom_det_pay_met"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/med_font"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </LinearLayout>


</LinearLayout>