<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">
    <TextView
        android:id="@+id/profile_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/small_font"
        android:paddingLeft="15dp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:background="@drawable/single_line_green">
        <TextView
            android:id="@+id/profile_information"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_green"
            android:layout_marginLeft="5dp"
            android:text="@string/info"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/med_font"
            />
        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="@dimen/big_font"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/profile_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font"
            android:paddingLeft="15dp"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/profile_address_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font"
            android:paddingLeft="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:background="@drawable/single_line_green">
        <TextView
            android:id="@+id/profile_contact"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_green"
            android:layout_marginLeft="5dp"
            android:text="@string/contact"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/med_font"
            />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textSize="@dimen/small_font"
            android:paddingTop="2dp"
            android:paddingLeft="15dp"/>

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font"
            android:paddingLeft="15dp"
           />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:id="@+id/profile_others"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_green"
            android:layout_marginLeft="5dp"
            android:text="@string/oth"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/med_font"
            />

        <TextView
            android:id="@+id/profile_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font"
            android:paddingLeft="15dp"
            android:paddingTop="2dp" />
        <TextView
            android:id="@+id/profile_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font"
            android:paddingLeft="15dp"
            />
        <TextView
            android:id="@+id/profile_last_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/small_font"
            android:paddingLeft="15dp"
            />
    </LinearLayout>

</LinearLayout>